fixed spacing and text on start page

--- a/dev/sass/components/_responsive.scss
+++ b/dev/sass/components/_responsive.scss
@@ -39,8 +39,8 @@
 	}
 	
     h1{
-    	font-size: 2.2rem;
     	font-weight:300;
+    	letter-spacing:6px;
     }
   }
 /** small screens */
@@ -50,6 +50,11 @@
 		display:inherit;
 		
 	}
+    h1{
+    	font-size: 2.2rem;
+    	font-weight:300;
+    	letter-spacing:6px;
+    }	
   	.what p{
 		padding-bottom: 30px;
 		margin-top:20px;
